WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183855
Compile error when not using IOSurface canvas backing store.
https://bugs.webkit.org/show_bug.cgi?id=183855
Summary
Compile error when not using IOSurface canvas backing store.
Per Arne Vollan
Reported
2018-03-21 09:21:37 PDT
The method IOSurface::createFromImageBuffer is only referenced when IOSurface is used as canvas backing store.
Attachments
Patch
(1.48 KB, patch)
2018-03-21 09:28 PDT
,
Per Arne Vollan
bfulgham
: review+
bfulgham
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.20 KB, patch)
2018-03-21 09:42 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.02 MB, application/zip)
2018-03-21 11:34 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-03-21 09:28:10 PDT
Created
attachment 336198
[details]
Patch
Brent Fulgham
Comment 2
2018-03-21 09:32:06 PDT
Comment on
attachment 336198
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336198&action=review
> Source/WebCore/platform/graphics/cocoa/IOSurface.mm:115 > +#endif
You should probably make this change in the header, too. We do so for "#if HAVE(IOSURFACE_ACCELERATOR)", for example, and in ImageBufferDataCG.h.
Per Arne Vollan
Comment 3
2018-03-21 09:34:49 PDT
(In reply to Brent Fulgham from
comment #2
)
> Comment on
attachment 336198
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=336198&action=review
> > > Source/WebCore/platform/graphics/cocoa/IOSurface.mm:115 > > +#endif > > You should probably make this change in the header, too. We do so for "#if > HAVE(IOSURFACE_ACCELERATOR)", for example, and in ImageBufferDataCG.h.
Yes, will do. Thanks for reviewing!
Per Arne Vollan
Comment 4
2018-03-21 09:42:55 PDT
Created
attachment 336199
[details]
Patch
WebKit Commit Bot
Comment 5
2018-03-21 10:52:49 PDT
Comment on
attachment 336199
[details]
Patch Clearing flags on attachment: 336199 Committed
r229812
: <
https://trac.webkit.org/changeset/229812
>
EWS Watchlist
Comment 6
2018-03-21 11:34:14 PDT
Comment on
attachment 336198
[details]
Patch
Attachment 336198
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7053725
New failing tests: http/tests/preload/download_resources.html
EWS Watchlist
Comment 7
2018-03-21 11:34:24 PDT
Created
attachment 336213
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Radar WebKit Bug Importer
Comment 8
2018-03-22 07:30:27 PDT
<
rdar://problem/38751176
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug