Compile error when not using IOSurface canvas backing store. https://bugs.webkit.org/show_bug.cgi?id=183855

Reviewed by Brent Fulgham.

The method IOSurface::createFromImageBuffer is only referenced when IOSurface
is used as canvas backing store.

* platform/graphics/cocoa/IOSurface.h:
* platform/graphics/cocoa/IOSurface.mm:


Canonical link: https://commits.webkit.org/199456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229812 268f45cc-cd09-0410-ab3c-d52691b4dbfc